--- a/public/style.css
+++ b/public/style.css
@@ -5,25 +5,9 @@ body {
 
 
 
-th {
-  border: 2px solid black;
-  text-align: left;
-  font-weight: bold;
-  padding: 4px;
-}
-
-td, tr {
-  border: 1px solid black;
-  height: 30px;
-  width: 100px;
-}
 
 table {
-  text-align: center;
-  border-collapse:  collapse;
-  border: 1px solid black;
-  background-color: white;
-  margin: 0px auto;
+  width: auto;
 }
 
 .header {
